--- a/CV-Bio-Abilities.html
+++ b/CV-Bio-Abilities.html
@@ -12,27 +12,27 @@
       <h1>Godfrey Stewart Morewood</h1>
         <nav class="navbar" id="navbarid"> <!--declaring and id'ing nav bar-->
           <ul>
-            <li><a href="file:///U:/w3%20Auth/CV/CVRepository/index.html">Home</a></li>
+            <li><a href="https://astroflyer.github.io/CVRepository/index.html">Home</a></li>
                 <div class="dropdown"> <!--creading a div for dropdown option-->
-                  <li><a class="bropbtn" href="file:///U:/w3%20Auth/CV/CVRepository/CVEducation.html">Education</a></li>
+                  <li><a class="bropbtn" href="https://astroflyer.github.io/CVRepository/CVEducation.html">Education</a></li>
                     <ul class="dropdown-content"><!--dropdown list-->
-                      <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CV-edu-Qualifications.html">Qualifications</a></li>
+                      <li><a href="https://astroflyer.github.io/CVRepository/CV-edu-Qualifications.html">Qualifications</a></li>
                     </ul>
                   </div>
-            <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CVEmployment.html">Employment</a></li>
+            <li><a href="https://astroflyer.github.io/CVRepository/CVEmployment.html">Employment</a></li>
                 <div class="dropdown"> <!--creading div for dropdown menu-->
-                  <li><a class="bropbtn" href="file:///U:/w3%20Auth/CV/CVRepository/CVBioHome.html">Bio</a></li>
+                  <li><a class="bropbtn" href="https://astroflyer.github.io/CVRepository/CVBioHome.html">Bio</a></li>
                       <ul class="dropdown-content"> <!--dropdown menu-->
-                      <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CV-Bio-Hobbies.html">Hobbies</a></li>
-                      <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CV-bio-Strengths.html">Strengths</a></li>
-                      <li><a id="active" href="file:///U:/w3%20Auth/CV/CVRepository/CV-Bio-Abilities.html">Abilities</a></li>
-                      <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CV-Bio-Past.html">Past</a></li>
-                      <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CV-bio-Future.html">Future</a></li>
-                      <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CV-Bio-NA.html">Notable Accomplishments</a></li>
+                      <li><a href="https://astroflyer.github.io/CVRepository/CV-Bio-Hobbies.html">Hobbies</a></li>
+                      <li><a href="https://astroflyer.github.io/CVRepository/CV-bio-Strengths.html">Strengths</a></li>
+                      <li><a id="active" href="https://astroflyer.github.io/CVRepository/CV-Bio-Abilities.html">Abilities</a></li>
+                      <li><a href="https://astroflyer.github.io/CVRepository/CV-Bio-Past.html">Past</a></li>
+                      <li><a href="https://astroflyer.github.io/CVRepository/CV-bio-Future.html">Future</a></li>
+                      <li><a href="https://astroflyer.github.io/CVRepository/CV-Bio-NA.html">Notable Accomplishments</a></li>
                       </ul>
                 </div>
-            <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CVProj.html">Projects</a></li>
-            <li><a href="file:///U:/w3%20Auth/CV/CVRepository/CVContact.html  ">Contact Me</a></li>
+            <li><a href="https://astroflyer.github.io/CVRepository/CVProj.html">Projects</a></li>
+            <li><a href="https://astroflyer.github.io/CVRepository/CVContact.html  ">Contact Me</a></li>
         </ul>
       </nav>
       <!--creating nav class for hamburger icon (reactive webpage)-->
