--- a/CV-Bio-Hobbies.html
+++ b/CV-Bio-Hobbies.html
@@ -48,7 +48,7 @@
       <main>
         <section id="s1">   <!--section ID for CSS-->
           <div class="ContentBox">   <!--content box div for CSS-->
-          <h2>Abilities</h2> <!--page title-->
+          <h2>Hobbies</h2> <!--page title-->
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
          </section>
        </div>
